Added two folders to organize code projects

--- a/Collection of Console Apps/Collection of Console Apps.csproj
+++ b/Collection of Console Apps/Collection of Console Apps.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CalculatorApp\" />
+    <Folder Include="Guess-It-Right\" />
+  </ItemGroup>
+
 </Project>
